src/styles/main/browse.scss
.browse {
  padding-bottom: 96px;

  @include onTablet {
    padding-bottom: 120px;
  }

  &__image {
    grid-column: span 1;
    max-width: 100%;
    margin-top: 40px;
    width: 100%;
    object-fit: cover;
    height: 130px;
    max-height: 200px;
    object-position: center;
    transition: transform 0.3s ease-in-out;
    border-radius: 8px;

    @include onTablet {
      margin-top: 56px;
      grid-column: span 2;
      height: 185px;
    }

    @include onDesktop {
      grid-column: span 4;
      height: 324px;
      max-height: none;
    }

    &--large {
      @include onTablet {
        grid-column: span 4;
      }

      @include onDesktop {
        grid-column: span 8;
      }
    }

    &:hover {
      transform: scale(1.05);
    }
  }

  &__title {
    grid-column: 1 / -1;
    margin-top: 16px;
    font-size: 18px;
    line-height: 140%;

    @include onTablet {
      font-size: 24px;
    }
  }

  &__button {
    grid-column: 1 / -1;
    margin-top: 40px;
    padding: 0 48px;
    height: 56px;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    border-radius: 8px;
    background-color: $text-color;
    border: 2px solid $text-color;
    outline: 0;
    color: #fff;
    font-family: inherit;
    font-weight: 700;
    cursor: pointer;
    transition: background-color 0.3s ease-in-out,
      color 0.3s ease-in-out,
      border 0.3s ease-in-out;

    @include onTablet {
      margin-top: 56px;
    }

    @include onDesktop {
      grid-column: 1 / 5;
    }

    &:hover {
      border: 2px solid #f0f1e4;
      background-color: #f8f8fa;
      color: $text-color;
    }

    &:focus {
      border: 2px solid #111;
      background-color: #111;
      color: #fff;
    }
  }
}

